Introduce MetaTypechecker